--- a/arcade_game/MainWindow.xaml
+++ b/arcade_game/MainWindow.xaml
@@ -56,6 +56,7 @@
                      HorizontalAlignment="Stretch" 
                      Margin="100,50,100,0"
                      VerticalContentAlignment="Center"
+                    Text=""
                     
                        />
                 <TextBlock x:Name="Placeholder2" IsHitTestVisible="False" TextWrapping="Wrap" Text="Speler 1:..." Foreground="DarkGray" TextAlignment="Center" VerticalAlignment="Center"
@@ -101,7 +102,7 @@
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
-            <Button HorizontalAlignment="Center" VerticalAlignment="Top" Width="150" Height="100" Margin="0,50,0,0">
+            <Button HorizontalAlignment="Center" VerticalAlignment="Top" Width="150" Height="100" Margin="0,50,0,0" Click="Button_Click">
             </Button>
         </Grid>
     </Grid>
