--- a/arcade_game/MainWindow.xaml
+++ b/arcade_game/MainWindow.xaml
@@ -5,105 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:arcade_game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="1080" Width="1920">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Label
-            Content="Arcade Game" FontSize="100" HorizontalAlignment="Center" VerticalContentAlignment="Center"/>
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <TextBox 
-                 Grid.Row="0"
-                     x:Name="teamnaam"
-                     TextWrapping="Wrap"
-                     BorderBrush="Black"
-                     BorderThickness="1" FontSize="25"
-                     TextAlignment="Center" 
-                     Margin="100,0,100,0"
-                     VerticalContentAlignment="Center"
-                       />
-            <TextBlock x:Name="Placeholder" IsHitTestVisible="False" TextWrapping="Wrap" Text="Teamnaam:..." VerticalAlignment="Center" Foreground="DarkGray" HorizontalAlignment="Center">
-                <TextBlock.Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="Visibility" Value="Collapsed"/>
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding Text, ElementName=teamnaam}" Value="">
-                                <Setter Property="Visibility" Value="Visible"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"></ColumnDefinition>
-                    <ColumnDefinition Width="1*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <TextBox 
-                 Grid.Column="0"
-                     x:Name="speler1"
-                     TextWrapping="Wrap"
-                     BorderBrush="Black"
-                     BorderThickness="1" FontSize="25"
-                     TextAlignment="Center" 
-                     HorizontalAlignment="Stretch" 
-                     Margin="100,50,100,0"
-                     VerticalContentAlignment="Center"
-                    Text=""
-                    
-                       />
-                <TextBlock x:Name="Placeholder2" IsHitTestVisible="False" TextWrapping="Wrap" Text="Speler 1:..." Foreground="DarkGray" TextAlignment="Center" VerticalAlignment="Center"
-                     HorizontalAlignment="Stretch" 
-                     Margin="100,50,100,0"
-                     >
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Text, ElementName=speler1}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox 
-                 Grid.Column="1"
-                     x:Name="speler2"
-                     TextWrapping="Wrap"
-                     BorderBrush="Black"
-                     BorderThickness="1" FontSize="25"
-                     TextAlignment="Center" 
-                     Margin="100,50,100,0"
-                     VerticalContentAlignment="Center"
-                       />
-                <TextBlock x:Name="Placeholder3" IsHitTestVisible="False" TextWrapping="Wrap" Text="Speler 2:..." Foreground="DarkGray" TextAlignment="Center" 
-                     Margin="100,53,100,-4" Grid.Column="1" VerticalAlignment="Center"
-                     
-                     >
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Text, ElementName=speler2}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </Grid>
-        </Grid>
-        <Grid Grid.Row="2">
-            <Button HorizontalAlignment="Center" VerticalAlignment="Top" Width="150" Height="100" Margin="0,50,0,0" Click="Button_Click">
-            </Button>
-        </Grid>
+        <Button Content="Start spel" HorizontalAlignment="Center" Margin="0,717,0,0" VerticalAlignment="Top" Height="48" Width="86" Click="Button_Click_1"/>
+
     </Grid>
 </Window>
