--- a/arcade_game/MainWindow.xaml
+++ b/arcade_game/MainWindow.xaml
@@ -16,10 +16,10 @@
         <Grid>
             <Grid Margin="178,0,178,0">
                 <Border BorderThickness="5,5,5,5" BorderBrush="White" Margin="0,10,0,10">
-                    <Button Content="Game Spelen" Click="Button_Click" Margin="38,138,38,202" Background="{x:Null}" FontFamily="Impact" FontSize="36" FontWeight="Bold" Foreground="White" BorderBrush="White" BorderThickness="3,2,3,2"/>
+                    <Button Content="Game Spelen" Click="Button_Click_1" Margin="38,138,38,202" Background="{x:Null}" FontFamily="Impact" FontSize="36" FontWeight="Bold" Foreground="White" BorderBrush="White" BorderThickness="3,2,3,2"/>
                 </Border>
             </Grid>
-            <Button Content="High score" HorizontalAlignment="Center" Margin="0,229,0,0" VerticalAlignment="Top" Height="63" Width="358" Background="{x:Null}" Foreground="White" FontFamily="Impact" FontSize="36" FontWeight="Bold" BorderBrush="White" BorderThickness="3,2,3,2"/>
+            <Button Content="High score" HorizontalAlignment="Center" Margin="0,229,0,0" VerticalAlignment="Top" Height="63" Width="358" Background="{x:Null}" Foreground="White" FontFamily="Impact" FontSize="36" FontWeight="Bold" BorderBrush="White" BorderThickness="3,2,3,2" Click="Button_Click"/>
             <Button Content="Opties" HorizontalAlignment="Left" Margin="221,325,0,0" VerticalAlignment="Top" Height="76" Width="165" IsCancel="True" Background="{x:Null}" BorderBrush="White" BorderThickness="3,2,3,2" FontFamily="Impact" FontSize="36" FontWeight="Bold" Foreground="White"/>
             <Button Content="Stoppen" HorizontalAlignment="Left" Margin="414,325,0,0" VerticalAlignment="Top" Height="76" Width="165" Click="Button_Click_1" Background="{x:Null}" BorderThickness="3,2,3,2" BorderBrush="White" Foreground="White" FontFamily="Impact" FontSize="36" FontWeight="Bold"/>
             <Border BorderThickness="5,5,5,5" BorderBrush="White" Margin="10,10,647,10"/>
