--- a/arcade_game/Highscore.xaml
+++ b/arcade_game/Highscore.xaml
@@ -30,13 +30,13 @@
         <Label Content="6th" HorizontalAlignment="Left" Margin="89,303,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
         <Label Content="7th" HorizontalAlignment="Left" Margin="89,342,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
         <Label Content="8th" HorizontalAlignment="Left" Margin="89,381,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="24" RenderTransformOrigin="0.37,0.602" Grid.Column="1"/>
-        <Button Content="Opties" HorizontalAlignment="Right" Margin="0,10,8,0" VerticalAlignment="Top" RenderTransformOrigin="0.307,0.647" Height="63" Width="55" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="16" BorderThickness="3,3,3,3" BorderBrush="White" Grid.Column="2">
+        <Button Content="Opties" HorizontalAlignment="Right" Margin="0,10,8,0" VerticalAlignment="Top" RenderTransformOrigin="0.307,0.647" Height="63" Width="55" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="16" BorderThickness="3,3,3,3" BorderBrush="White" Grid.Column="2" Click="Button_Click_1">
             <Button.Background>
                 <ImageBrush/>
             </Button.Background>
 
         </Button>
-        <Button Content="Terug" HorizontalAlignment="Left" Margin="8,10,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="16" BorderBrush="White" BorderThickness="3,3,3,3" Height="63" Width="55" Grid.ColumnSpan="2">
+        <Button Content="Terug" HorizontalAlignment="Left" Margin="8,10,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="16" BorderBrush="White" BorderThickness="3,3,3,3" Height="63" Width="55" Grid.ColumnSpan="2" Click="Button_Click">
             <Button.Background>
                 <ImageBrush/>
             </Button.Background>
