--- a/arcade_game/MainWindow.xaml
+++ b/arcade_game/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ImageBrush ImageSource="/Image/istockphoto-1182467404-170667a.jpg"/>
         </Grid.Background>
         <Label HorizontalContentAlignment="Left">
-            <Label Content="Arcade" Width="790" Height="166" FontSize="100" FontFamily="Impact" FontWeight="Bold" FontStyle="Normal" Foreground="White" FontStretch="Normal" BorderThickness="0,0,0,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+            <Label Content="Arcade 2.0" Width="790" Height="166" FontSize="100" FontFamily="Impact" FontWeight="Bold" FontStyle="Normal" Foreground="White" FontStretch="Normal" BorderThickness="0,0,0,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
         </Label>
         <Grid>
             <Grid Margin="178,0,178,0">
