--- a/arcade_game/game.xaml
+++ b/arcade_game/game.xaml
@@ -24,9 +24,14 @@
                    Canvas.Top="577" />
         <Rectangle x:Name="platoform2" 
                    Tag="platform" 
-                   Fill="Black" 
+                   Fill="Yellow" 
                    Height="50" Width="300" 
                    Canvas.Left="100" Canvas.Top="500"/>
+        <Rectangle x:Name="platoform1" 
+                   Tag="platform" 
+                   Fill="Orange" 
+                   Height="50" Width="300" 
+                   Canvas.Left="148" Canvas.Top="680"/>
 
     </Canvas>
 </Window>
