--- a/arcade_game/game.xaml
+++ b/arcade_game/game.xaml
@@ -13,16 +13,16 @@
                    Tag="player"
                    Height="50"
                    Width="50"
-                   Canvas.Left="605"
-                   Canvas.Top="328" RenderTransformOrigin="0.501,0.539"/>
+                   Canvas.Left="525"
+                   Canvas.Top="22" RenderTransformOrigin="0.501,0.539"/>
         <Rectangle x:Name="Player2"
                    Fill="red"
                    Tag="player"
                    Height="49"
 
                    Width="50"
-                   Canvas.Left="550"
-                   Canvas.Top="328" />
+                   Canvas.Left="474"
+                   Canvas.Top="166" />
         <Rectangle x:Name="platform1" 
                    Tag="platform" 
                    Fill="Yellow" 
@@ -63,6 +63,21 @@
                    Tag ="door"
                    Canvas.Left="680" Canvas.Top="297"
                    Height="83" Width="38" />
+        <Rectangle x:Name="knop1"
+                   Tag="knop"
+                   Fill="Pink"
+                   Height="6" Width="50" 
+                   Canvas.Left="694" Canvas.Top="223"/>
+        <Rectangle x:Name="knop2"
+                   Tag="knop"
+                   Fill="Pink"
+                   Height="6" Width="50" 
+                   Canvas.Left="280" Canvas.Top="80"/>
+        <Rectangle x:Name="opstakel1"
+                   Tag="opstakel"
+                   Fill="Pink"
+                   Height="50" Width="102" 
+                   Canvas.Left="399" Canvas.Top="87"/>
 
 
     </Canvas>
