--- a/arcade_game/Highscore.xaml
+++ b/arcade_game/Highscore.xaml
@@ -19,8 +19,8 @@
         <Border BorderThickness="5,5,5,5" BorderBrush="White" Margin="36,10,70,10" Grid.ColumnSpan="2" Grid.Column="1"/>
         <Border BorderThickness="5,5,5,5" BorderBrush="White" Margin="36,10,70,354" Grid.ColumnSpan="2" Grid.Column="1"/>
         <Label Content="Score" HorizontalAlignment="Left" Margin="594,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Label Content="Speler 2" HorizontalAlignment="Left" Margin="302,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
-        <Label Content="Speler 1" HorizontalAlignment="Left" Margin="176,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
+        <Label Content="Speler 1" HorizontalAlignment="Left" Margin="331,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
+        <Label Content="Teamnaam" HorizontalAlignment="Left" Margin="176,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
         <Label Content="Rank" HorizontalAlignment="Left" Margin="81,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
         <Label Content="1st" HorizontalAlignment="Left" Margin="89,108,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.329,0.996" Foreground="#FFFBF7F7" FontFamily="Impact" FontWeight="Bold" FontSize="24" Grid.Column="1"/>
         <Label Content="2nd" HorizontalAlignment="Left" Margin="86,147,0,0" VerticalAlignment="Top" Foreground="#FFFBF7F7" FontFamily="Impact" FontSize="24" RenderTransformOrigin="-2.112,-0.477" Grid.Column="1"/>
@@ -29,6 +29,7 @@
         <Label Content="5th" HorizontalAlignment="Left" Margin="89,276,0,0" VerticalAlignment="Top" FontFamily="Impact" FontWeight="Bold" FontSize="24" Foreground="White" RenderTransformOrigin="0.827,0.581" Grid.Column="1"/>
         <Label Content="6th" HorizontalAlignment="Left" Margin="88,320,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1" RenderTransformOrigin="0.483,0.849"/>
         <Label Content="7th" HorizontalAlignment="Left" Margin="90,364,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
+        <Label Content="" x:Name="label" HorizontalAlignment="Left" Margin="302,310,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontSize="24" FontWeight="Bold" Grid.Column="1"/>
         <Label Content="8th" HorizontalAlignment="Left" Margin="89,408,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="24" RenderTransformOrigin="0.37,0.602" Grid.Column="1"/>
         <Button Content="Opties" HorizontalAlignment="Right" Margin="0,10,8,0" VerticalAlignment="Top" RenderTransformOrigin="0.307,0.647" Height="63" Width="55" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="16" BorderThickness="3,3,3,3" BorderBrush="White" Grid.Column="2" Click="Button_Click_1">
             <Button.Background>
@@ -41,7 +42,7 @@
                 <ImageBrush/>
             </Button.Background>
         </Button>
-        <Label Content="Teamnaam" Grid.Column="1" HorizontalAlignment="Left" Margin="441,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="24"/>
-
+        <Label Content="Speler 2" Grid.Column="1" HorizontalAlignment="Left" Margin="470,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Impact" FontWeight="Bold" FontSize="24"/>
+        <StackPanel x:Name="HighScorePanel" Background="Pink" Grid.Column="1" Margin="176,105,76,17" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
