--- a/arcade_game/game2.xaml
+++ b/arcade_game/game2.xaml
@@ -110,8 +110,8 @@
                    Source="/Image/pngwing.com.png" 
                    Canvas.Top="533" Width="25"/>
         <Rectangle Height="2" Stroke="Black" Canvas.Top="40" Width="815"/>
-        <Button Content="Herstart" Canvas.Left="681" Canvas.Top="10" Click="Button_Click"/>
-        <Button Content="Stoppen" Canvas.Left="745" Canvas.Top="10" Click="Button_Click_1"/>
+        <Button Content="Herstart" Canvas.Left="681" Canvas.Top="10" Click="Restart"/>
+        <Button Content="Stoppen" Canvas.Left="745" Canvas.Top="10" Click="Main"/>
 
     </Canvas>
 </Window>
